--- a/WispSurvivor/Properties/Resources.resx
+++ b/WispSurvivor/Properties/Resources.resx
@@ -130,10 +130,10 @@
     <value>Rogue Wisp</value>
   </data>
   <data name="lang__WISP_SURVIVOR_PASSIVE_DESC" xml:space="preserve">
-    <value>&lt;style=cIsUtility&gt;Flame Charge&lt;/style&gt; &lt;style=cIsDamage&gt;Empowers&lt;/style&gt; your abilities but decays over time.\nGain &lt;style=cIsDamage&gt;Barrier&lt;/style&gt; based on &lt;style=cIsHealth&gt;Maximum Health&lt;/style&gt; whenever you regain &lt;style=cIsUtility&gt;Flame Charge.&lt;/style&gt;</value>
+    <value>&lt;style=cIsUtility&gt;Flame Charge&lt;/style&gt; &lt;style=cIsDamage&gt;Empowers&lt;/style&gt; your abilities but decays over time.\nGain &lt;style=cIsDamage&gt;Barrier&lt;/style&gt; whenever you regain &lt;style=cIsUtility&gt;Flame Charge.&lt;/style&gt;</value>
   </data>
   <data name="lang__WISP_SURVIVOR_PASSIVE_NAME" xml:space="preserve">
-    <value />
+    <value>Unstable Conflagration</value>
   </data>
   <data name="lang__WISP_SURVIVOR_PRIMARY_1_DESC" xml:space="preserve">
     <value>Fire a shockwave for &lt;style=cIsDamage&gt;165% damage.&lt;/style&gt; &lt;style=cIsUtility&gt;Restores Flame Charge&lt;/style&gt; on hit.</value>
@@ -154,7 +154,7 @@
     <value>Incineration</value>
   </data>
   <data name="lang__WISP_SURVIVOR_SUBTITLE_NAME" xml:space="preserve">
-    <value />
+    <value>Flare-Forged Sentience</value>
   </data>
   <data name="lang__WISP_SURVIVOR_UTILITY_1_DESC" xml:space="preserve">
     <value>Create an &lt;style=cIsDamage&gt;Inferno&lt;/style&gt; that &lt;style=cIsDamage&gt;Ignites&lt;/style&gt; all enemies for &lt;style=cIsDamage&gt;80% damage&lt;/style&gt; per second. While in an &lt;style=cIsDamage&gt;Inferno&lt;/style&gt;&lt;style=cIsUtility&gt; Move Faster&lt;/style&gt; and &lt;style=cIsUtility&gt;Gain Flame Charge&lt;/style&gt; from &lt;style=cIsDamage&gt;Ignited&lt;/style&gt; enemies.</value>
@@ -164,10 +164,10 @@
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="NetLib" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>NetLib.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\NetLib.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="ReinCore" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>ReinCore.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\ReinCore.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="wispscene" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>wispscene;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
