--- a/ReinCore/Properties/Resources.resx
+++ b/ReinCore/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="RoR2ScriptForwarding" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>RoR2ScriptForwarding.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="wooting_rgb_sdk64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>wooting-rgb-sdk64.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
