Fixed some alt arti bugs, began working on sniper decoy

--- a/Sniper/Properties/Resources.resx
+++ b/Sniper/Properties/Resources.resx
@@ -235,10 +235,10 @@
     <value>Decoy</value>
   </data>
   <data name="lang__SNIPER_SPECIAL_KNIFE_DESC" xml:space="preserve">
-    <value>Blink to a knife</value>
+    <value>Dennis</value>
   </data>
   <data name="lang__SNIPER_SPECIAL_KNIFE_NAME" xml:space="preserve">
-    <value>Blink Knife</value>
+    <value>DENNIS</value>
   </data>
   <data name="lang__SNIPER_SUBTITLE" xml:space="preserve">
     <value>[Insert cool thing here]</value>
