--- a/Sniper/Properties/Resources.resx
+++ b/Sniper/Properties/Resources.resx
@@ -175,7 +175,7 @@
     <value>Shock</value>
   </data>
   <data name="lang__SNIPER_AMMO_STANDARD_DESC" xml:space="preserve">
-    <value>Deals 100% primary damage, pierces enemies, and has a chance to ricochet.</value>
+    <value>Deals 110% primary damage, pierces enemies, and has a chance to ricochet.</value>
   </data>
   <data name="lang__SNIPER_AMMO_STANDARD_NAME" xml:space="preserve">
     <value>Full Metal Jacket</value>
@@ -193,13 +193,13 @@
     <value>Precise Aim</value>
   </data>
   <data name="lang__SNIPER_PASSIVE_HEADSHOT_DESC" xml:space="preserve">
-    <value>Shooting enemies in the head deals 50% more damage</value>
+    <value>Shooting enemies in the head deals 50% more damage (Unfinished for most enemies)</value>
   </data>
   <data name="lang__SNIPER_PASSIVE_HEADSHOT_NAME" xml:space="preserve">
     <value>Headshot</value>
   </data>
   <data name="lang__SNIPER_PRIMARY_DASH_DESC" xml:space="preserve">
-    <value>Fire, and dash when reloading</value>
+    <value>Fire for 260% damage. Reloading at the right time grants up to double damage.</value>
   </data>
   <data name="lang__SNIPER_PRIMARY_DASH_NAME" xml:space="preserve">
     <value>Reposition</value>
@@ -211,7 +211,7 @@
     <value>Sliding Reload</value>
   </data>
   <data name="lang__SNIPER_PRIMARY_SNIPE_DESC" xml:space="preserve">
-    <value>Shoot enemies for 300% damage. Must be reloaded after firing. Reloading at the right time grants extra damage.</value>
+    <value>Shoot enemies for 300% damage. Must be reloaded after firing. Reloading at the right time grants up to double damage.</value>
   </data>
   <data name="lang__SNIPER_PRIMARY_SNIPE_NAME" xml:space="preserve">
     <value>Snipe</value>
@@ -223,7 +223,7 @@
     <value>Reload</value>
   </data>
   <data name="lang__SNIPER_SECONDARY_QUICK_DESC" xml:space="preserve">
-    <value>Fire off a quick to aim, powerful shot while maintaining mobility</value>
+    <value>Fire off a quick to aim, powerful shot dealing 200% primary damage while maintaining mobility</value>
   </data>
   <data name="lang__SNIPER_SECONDARY_QUICK_NAME" xml:space="preserve">
     <value>Quickscope</value>
@@ -250,25 +250,25 @@
     <value>Default</value>
   </data>
   <data name="lang__SNIPER_SPECIAL_DECOY_DESC" xml:space="preserve">
-    <value>Drop a decoy</value>
+    <value>Go invisible and drop a decoy that distracts enemies. On death, the decoy explodes for 500% damage, stunning and weakening nearby enemies.</value>
   </data>
   <data name="lang__SNIPER_SPECIAL_DECOY_NAME" xml:space="preserve">
     <value>Decoy</value>
   </data>
   <data name="lang__SNIPER_SPECIAL_KNIFE_DESC" xml:space="preserve">
-    <value>Dennis</value>
+    <value>Throw a knife that deals 100% damage and sticks on hit. Reactivate to teleport to the knife. When close to the knife, pick it up, deal 200% damage, and mark nearby enemies. Killing a marked enemy resets all your cooldowns.</value>
   </data>
   <data name="lang__SNIPER_SPECIAL_KNIFE_NAME" xml:space="preserve">
-    <value>DENNIS</value>
+    <value>Blink Knife</value>
   </data>
   <data name="lang__SNIPER_SUBTITLE" xml:space="preserve">
     <value>[Insert cool thing here]</value>
   </data>
   <data name="lang__SNIPER_UTILITY_BACKFLIP_DESC" xml:space="preserve">
-    <value>Do a backflip</value>
+    <value>Perform a backflip</value>
   </data>
   <data name="lang__SNIPER_UTILITY_BACKFLIP_NAME" xml:space="preserve">
-    <value>Military Training</value>
+    <value>Backflip</value>
   </data>
   <data name="PlasmaAmmoIcon" xml:space="preserve">
     <value />
